--- a/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
@@ -138,6 +138,25 @@
                         Width: =Parent.Width
                         ZIndex: =2
 
+                    Button5 As button:
+                        BorderColor: =RGBA(85, 69, 191,1)
+                        Color: =RGBA(85, 69, 191,1)
+                        DisabledBorderColor: =RGBA(244, 244, 244, 1)
+                        DisabledColor: =RGBA(166, 166, 166, 1)
+                        DisabledFill: =RGBA(244, 244, 244, 1)
+                        Fill: =RGBA(255,255,255,1)
+                        FocusedBorderThickness: =2
+                        Font: =App.Theme.Font
+                        FontWeight: =FontWeight.Semibold
+                        HoverBorderColor: =Self.BorderColor
+                        HoverFill: =RGBA(170, 163, 217, 0.2)
+                        PressedBorderColor: =Self.BorderColor
+                        PressedColor: =Self.Color
+                        PressedFill: =RGBA(170, 163, 217, 0.4)
+                        Size: =11
+                        Text: ="View Attached Documents"
+                        ZIndex: =3
+
                 Canvas1_1 As fluidGrid.fluidGridWithBlankCard:
                     BorderThickness: =0
                     Fill: =RGBA(255, 255, 255, 1)
@@ -467,4 +486,148 @@
                             X: =wifeCount_label.X
                             Y: =wifeCount_label.Y + wifeCount_label.Height
                             ZIndex: =22
+
+    Container1 As groupContainer.manualLayoutContainer:
+        DropShadow: =DropShadow.Light
+        Fill: =RGBA(0, 0, 0, 0.7)
+        Height: =Parent.Height
+        RadiusBottomLeft: =4
+        RadiusBottomRight: =4
+        RadiusTopLeft: =4
+        RadiusTopRight: =4
+        Width: =Parent.Width
+        ZIndex: =3
+
+        Icon3 As icon.Cancel:
+            BorderColor: =App.Theme.Colors.Darker40
+            Color: =RGBA(255,255,255,1)
+            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+            DisabledColor: =RGBA(244, 244, 244, 1)
+            Height: =30
+            Icon: =Icon.Cancel
+            Width: =30
+            X: =Parent.Width - Self.Width - 20
+            Y: =20
+            ZIndex: =1
+
+        Container6 As groupContainer.manualLayoutContainer:
+            DropShadow: =DropShadow.Light
+            Height: =Self.Width
+            RadiusBottomLeft: =4
+            RadiusBottomRight: =4
+            RadiusTopLeft: =4
+            RadiusTopRight: =4
+            Width: =Parent.Width * 30%
+            X: =Parent.Width / 2 - Self.Width/2
+            Y: =Parent.Height/2 - Self.Height/2
+            ZIndex: =2
+
+            Gallery1 As gallery.galleryHorizontal:
+                BorderColor: =App.Theme.Colors.Darker40
+                DelayItemLoading: =true
+                Height: =409.8
+                Items: =attachments
+                LoadingSpinner: =LoadingSpinner.Data
+                ShowNavigation: =true
+                ShowScrollbar: =false
+                TemplateSize: =Parent.Width//If(Self.Layout = Layout.Horizontal, Min(320, Self.Width - 60), Min(320, Self.Height - 60))
+                Width: =409.8
+                ZIndex: =1
+
+                Container5_1 As groupContainer.manualLayoutContainer:
+                    DropShadow: =DropShadow.Light
+                    Fill: =RGBA(255, 255, 255, 1)
+                    Height: =Parent.TemplateHeight
+                    RadiusBottomLeft: =4
+                    RadiusBottomRight: =4
+                    RadiusTopLeft: =4
+                    RadiusTopRight: =4
+                    Width: =Parent.TemplateWidth
+                    ZIndex: =1
+
+                    Image10_2 As image:
+                        BorderColor: =App.Theme.Colors.Darker40
+                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledFill: =RGBA(244, 244, 244, 1)
+                        Height: =Parent.Height * 90%
+                        Image: |-
+                            =With(
+                                {
+                                    fileExtension: Last(
+                                        ForAll(Split(
+                                            ThisItem.DisplayName,
+                                            "."
+                                        ), {Result: ThisRecord.Value})
+                                    ).Result
+                                },
+                                If(
+                                    fileExtension in [
+                                        "xlsx",
+                                        "xls",
+                                        "csv"
+                                    ],
+                                   "data:image/svg+xml;utf8, " & EncodeUrl("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2048 2048'><path d='M2048 475v1445q0 27-10 50t-27 40-41 28-50 10H640q-27 0-50-10t-40-27-28-41-10-50v-256H115q-24 0-44-9t-37-25-25-36-9-45V627q0-24 9-44t25-37 36-25 45-9h397V128q0-27 10-50t27-40 41-28 50-10h933q26 0 49 9t42 28l347 347q18 18 27 41t10 50zm-384-256v165h165l-165-165zM261 1424h189q2-4 12-23t25-45 29-55 29-53 23-41 10-17q27 59 60 118t65 116h187l-209-339 205-333H707q-31 57-60 114t-63 112q-29-57-57-113t-57-113H279l199 335-217 337zm379 496h1280V512h-256q-27 0-50-10t-40-27-28-41-10-50V128H640v384h397q24 0 44 9t37 25 25 36 9 45v922q0 24-9 44t-25 37-36 25-45 9H640v256zm640-1024V768h512v128h-512zm0 256v-128h512v128h-512zm0 256v-128h512v128h-512z' fill='Purple'></path></svg>"),
+                                    If(
+                                        fileExtension in [
+                                            "png",
+                                            "jpg",
+                                            "jpeg",
+                                            "gif"
+                                        ],
+                                        ThisItem.Value,
+                                        If(
+                                            "appres://" in ThisItem.AbsoluteUri,
+                                             "data:image/svg+xml;utf8, " & EncodeUrl("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2048 2048'><path d='M1115 0l549 549v91h-640V0h91zm37 512h293l-293-293v293zm384 384V768h128v128h-128zm0 256v-128h128v128h-128zm0 256v-128h128v128h-128zm0 256v-128h128v128h-128zm0 256v-128h128v128h-128zm-256 0v-128h128v128h-128zm-256 0v-128h128v128h-128zm-256 0v-128h128v128H768zm-256 0v-128h128v128H512zm-256 0v-128h128v128H256zm0-1024V768h128v128H256zm0-256V512h128v128H256zm0-256V256h128v128H256zm0-256V0h128v128H256zm256 0V0h128v128H512zm256 0V0h128v128H768zM256 1152v-128h128v128H256zm0 256v-128h128v128H256zm0 256v-128h128v128H256z' fill='Purple'></path></svg>"),
+                                            If(
+                                                fileExtension in [
+                                                    "pdf",
+                                                    "pptx",
+                                                    "docx",
+                                                    "ppt",
+                                                    "doc"
+                                                ] && IsBlank(Acceleration.X),
+                                                "https://thepoweraddicts.sharepoint.com/_layouts/15/getpreview.ashx?path=" & (ThisItem.AbsoluteUri) & "&resolution=6",
+                                                If(
+                                                    fileExtension in "svg" && IsBlank(Acceleration.X),
+                                                    ThisItem.Value,
+                                                    "data:image/svg+xml;utf8, " & EncodeUrl("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2048 2048'><path d='M1115 0l549 549v91h-640V0h91zm37 512h293l-293-293v293zm384 384V768h128v128h-128zm0 256v-128h128v128h-128zm0 256v-128h128v128h-128zm0 256v-128h128v128h-128zm0 256v-128h128v128h-128zm-256 0v-128h128v128h-128zm-256 0v-128h128v128h-128zm-256 0v-128h128v128H768zm-256 0v-128h128v128H512zm-256 0v-128h128v128H256zm0-1024V768h128v128H256zm0-256V512h128v128H256zm0-256V256h128v128H256zm0-256V0h128v128H256zm256 0V0h128v128H512zm256 0V0h128v128H768zM256 1152v-128h128v128H256zm0 256v-128h128v128H256zm0 256v-128h128v128H256z' fill='Purple'></path></svg>")
+                                                )
+                                            )
+                                        )
+                                    )
+                                )
+                            )
+                        ImagePosition: =ImagePosition.Fill
+                        OnSelect: =
+                        RadiusBottomLeft: =8
+                        RadiusBottomRight: =8
+                        RadiusTopLeft: =8
+                        RadiusTopRight: =8
+                        Width: =Parent.Width
+                        ZIndex: =1
+
+                    TextCanvas1_1 As Text:
+                        Align: ='TextCanvas.Align'.Center
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =Parent.Height - Image10_2.Height
+                        Text: =First(Split(ThisItem.DisplayName,".")).Value
+                        Weight: ='TextCanvas.Weight'.Bold
+                        Width: =Parent.Width
+                        X: =0
+                        Y: =Parent.Height- Self.Height
+                        ZIndex: =2
+
+                    Icon1_1 As icon.Download:
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Color: =RGBA(102, 51, 153, 1)
+                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledColor: =RGBA(244, 244, 244, 1)
+                        Fill: =RGBA(255, 255, 255, 1)
+                        Height: =40
+                        Icon: =Icon.Download
+                        OnSelect: =Download(ThisItem.AbsoluteUri)
+                        Width: =40
+                        X: =Parent.Width - Self.Width - 5
+                        Y: =5
+                        ZIndex: =3
 
