--- a/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
@@ -150,6 +150,8 @@
                         FontWeight: =FontWeight.Semibold
                         HoverBorderColor: =Self.BorderColor
                         HoverFill: =RGBA(170, 163, 217, 0.2)
+                        OnSelect: |-
+                            =UpdateContext({showImage:true})
                         PressedBorderColor: =Self.BorderColor
                         PressedColor: =Self.Color
                         PressedFill: =RGBA(170, 163, 217, 0.4)
@@ -495,6 +497,7 @@
         RadiusBottomRight: =4
         RadiusTopLeft: =4
         RadiusTopRight: =4
+        Visible: =showImage
         Width: =Parent.Width
         ZIndex: =3
 
@@ -505,6 +508,8 @@
             DisabledColor: =RGBA(244, 244, 244, 1)
             Height: =30
             Icon: =Icon.Cancel
+            OnSelect: |-
+                =UpdateContext({showImage:false})
             Width: =30
             X: =Parent.Width - Self.Width - 20
             Y: =20
@@ -530,8 +535,9 @@
                 LoadingSpinner: =LoadingSpinner.Data
                 ShowNavigation: =true
                 ShowScrollbar: =false
+                TemplatePadding: =0
                 TemplateSize: =Parent.Width//If(Self.Layout = Layout.Horizontal, Min(320, Self.Width - 60), Min(320, Self.Height - 60))
-                Width: =409.8
+                Width: =Parent.Width
                 ZIndex: =1
 
                 Container5_1 As groupContainer.manualLayoutContainer:
@@ -549,6 +555,7 @@
                         BorderColor: =App.Theme.Colors.Darker40
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledFill: =RGBA(244, 244, 244, 1)
+                        DisplayMode: =DisplayMode.View
                         Height: =Parent.Height * 90%
                         Image: |-
                             =With(
@@ -619,13 +626,15 @@
 
                     Icon1_1 As icon.Download:
                         BorderColor: =App.Theme.Colors.Darker40
-                        Color: =RGBA(102, 51, 153, 1)
+                        Color: =RGBA(255,255,255,1)//RGBA(102, 51, 153, 1)
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
-                        Fill: =RGBA(255, 255, 255, 1)
+                        Fill: =RGBA(0, 0, 0, 1)
                         Height: =40
                         Icon: =Icon.Download
                         OnSelect: =Download(ThisItem.AbsoluteUri)
+                        PaddingBottom: =3
+                        PaddingTop: =3
                         Width: =40
                         X: =Parent.Width - Self.Width - 5
                         Y: =5
