--- a/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
@@ -489,6 +489,66 @@
                             Y: =wifeCount_label.Y + wifeCount_label.Height
                             ZIndex: =22
 
+                        occupation_label As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 0.5)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =10
+                            Text: ="Occupation"
+                            X: =name_label.X
+                            Y: =email_value.Y + email_value.Height + 10
+                            ZIndex: =23
+
+                        occupation_value As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            DisplayMode: =DisplayMode.View
+                            Fill: =RGBA(159, 159, 159, 0.1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =11
+                            Text: =record.Occupation
+                            Width: =Parent.Width/4 - 20
+                            X: =occupation_label.X
+                            Y: =occupation_label.Y + occupation_label.Height
+                            ZIndex: =24
+
+                        email_label_2 As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 0.5)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =10
+                            Text: ="Company Name and Address"
+                            Width: =200
+                            X: =occupation_value.X + occupation_value.Width + 10
+                            Y: =email_value.Y + email_value.Height + 10
+                            ZIndex: =25
+
+                        email_value_2 As label:
+                            AutoHeight: =true
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            DisplayMode: =DisplayMode.View
+                            Fill: =RGBA(159, 159, 159, 0.1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =11
+                            Text: =record.'Company Name and Address'
+                            Width: =Parent.Width/2 - 20
+                            X: =email_label_2.X
+                            Y: =email_label_2.Y + email_label_2.Height
+                            ZIndex: =26
+
     Container1 As groupContainer.manualLayoutContainer:
         DropShadow: =DropShadow.Light
         Fill: =RGBA(0, 0, 0, 0.7)
