--- a/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
@@ -669,7 +669,7 @@
                             Y: =currentResidentialAddress_label.Y + currentResidentialAddress_label.Height
                             ZIndex: =34
 
-                        spouseName_label_1 As label:
+                        reasonForLeaving_label As label:
                             BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(4, 4, 4, 0.5)
                             DisabledColor: =RGBA(166, 166, 166, 1)
@@ -683,7 +683,7 @@
                             Y: =If(spouseDetails_value.Height > spouseName_value.Height,spouseDetails_value.Y + spouseDetails_value.Height + 10,spouseName_value.Y + spouseName_value.Height + 10)
                             ZIndex: =35
 
-                        spouseName_value_1 As label:
+                        reasonForLeaving_value As label:
                             AutoHeight: =true
                             BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(4, 4, 4, 1)
@@ -696,9 +696,40 @@
                             Size: =11
                             Text: =record.'Reason for Leaving'
                             Width: =Parent.Width/2 - 10
-                            X: =spouseName_label_1.X
-                            Y: =spouseName_label_1.Y + spouseName_label_1.Height
+                            X: =reasonForLeaving_label.X
+                            Y: =reasonForLeaving_label.Y + reasonForLeaving_label.Height
                             ZIndex: =36
+
+                        currentResidentialAddress_label_1 As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 0.5)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =10
+                            Text: ="Current Residential Address"
+                            Width: =200
+                            X: =name_label.X
+                            Y: =If(currentResidentialAddress_value.Height > reasonForLeaving_value.Height,currentResidentialAddress_value.Y + currentResidentialAddress_value.Height + 10,spouseName_value.Y + spouseName_value.Height + 10)
+                            ZIndex: =37
+
+                        currentResidentialAddress_value_1 As label:
+                            AutoHeight: =true
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            DisplayMode: =DisplayMode.View
+                            Fill: =RGBA(159, 159, 159, 0.1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =11
+                            Text: =record.'Current Residential Address'
+                            Width: =Parent.Width/2 - 20
+                            X: =currentResidentialAddress_label_1.X
+                            Y: =currentResidentialAddress_label_1.Y + currentResidentialAddress_label_1.Height
+                            ZIndex: =38
 
     Container1 As groupContainer.manualLayoutContainer:
         DropShadow: =DropShadow.Light
