--- a/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
@@ -730,6 +730,36 @@
                             Y: =petStatus_label.Y + petStatus_label.Height
                             ZIndex: =38
 
+                        currentResidentialAddress_label_1 As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 0.5)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =10
+                            Text: ="Do you have pets or Intend to have one?"
+                            Width: =280
+                            X: =petStatus_value.X + petStatus_value.Width + 10
+                            Y: =If(currentResidentialAddress_value.Height > reasonForLeaving_value.Height,currentResidentialAddress_value.Y + currentResidentialAddress_value.Height + 10,reasonForLeaving_value.Y + reasonForLeaving_value.Height + 10)
+                            ZIndex: =39
+
+                        currentResidentialAddress_value_1 As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            DisplayMode: =DisplayMode.View
+                            Fill: =RGBA(159, 159, 159, 0.1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =11
+                            Text: =record.'Current Residential Address'
+                            Width: =Parent.Width/3 - 20
+                            X: =currentResidentialAddress_label_1.X
+                            Y: =currentResidentialAddress_label_1.Y + currentResidentialAddress_label_1.Height
+                            ZIndex: =40
+
     Container1 As groupContainer.manualLayoutContainer:
         DropShadow: =DropShadow.Light
         Fill: =RGBA(0, 0, 0, 0.7)
