--- a/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
@@ -774,7 +774,7 @@
                             Y: =petStatus_value.Y + petStatus_value.Height + 10
                             ZIndex: =41
 
-                        petStatus_value_1 As label:
+                        noOfCars_value As label:
                             BorderColor: =App.Theme.Colors.Darker40
                             Color: =RGBA(4, 4, 4, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
@@ -789,6 +789,36 @@
                             X: =noOfCars_label.X
                             Y: =noOfCars_label.Y + noOfCars_label.Height
                             ZIndex: =42
+
+                        noOfCars_label_1 As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 0.5)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =10
+                            Text: ="Number of cars"
+                            Width: =280
+                            X: =noOfCars_value.X + noOfCars_value.Width + 10
+                            Y: =petStatus_value.Y + petStatus_value.Height + 10
+                            ZIndex: =43
+
+                        noOfCars_value_1 As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            DisplayMode: =DisplayMode.View
+                            Fill: =RGBA(159, 159, 159, 0.1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =11
+                            Text: =record.'Number of Cars'
+                            Width: =Parent.Width/3 - 20
+                            X: =noOfCars_label_1.X
+                            Y: =noOfCars_label_1.Y + noOfCars_label_1.Height
+                            ZIndex: =44
 
     Container1 As groupContainer.manualLayoutContainer:
         DropShadow: =DropShadow.Light
